cmake_minimum_required(VERSION 3.23)
project(Noter_Egen_kode_eksempler C)

set(CMAKE_C_STANDARD 99)

add_executable(Main.c main.c)
add_executable(Pointer-1 Pointer-1.c)
add_executable(Pointer-2 Pointer-2.c)
add_executable(Pointer-3 Pointer-3.c)
add_executable(Struct-1 Struct-1.c)
add_executable(Struct-2 Struct-2.c)
add_executable(Structs_og_pointere Structs_og_pointere.c)
add_executable(Test Test.c)
add_executable(Rekreativt_Program Rekreativt_program.c)